--- a/battery_tester.ioc
+++ b/battery_tester.ioc
@@ -37,51 +37,52 @@ Mcu.IP9=TIM3
 Mcu.IPNb=12
 Mcu.Name=STM32G484RETx
 Mcu.Package=LQFP64
-Mcu.Pin0=PF0-OSC_IN
-Mcu.Pin1=PG10-NRST
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PC4
-Mcu.Pin13=PC5
-Mcu.Pin14=PB0
-Mcu.Pin15=PB1
-Mcu.Pin16=PB2
-Mcu.Pin17=PB11
-Mcu.Pin18=PB12
-Mcu.Pin19=PB13
-Mcu.Pin2=PC1
-Mcu.Pin20=PB14
-Mcu.Pin21=PB15
-Mcu.Pin22=PC6
-Mcu.Pin23=PC7
-Mcu.Pin24=PC8
-Mcu.Pin25=PC9
-Mcu.Pin26=PA8
-Mcu.Pin27=PA9
-Mcu.Pin28=PA11
-Mcu.Pin29=PA12
-Mcu.Pin3=PC2
-Mcu.Pin30=PA13
-Mcu.Pin31=PA14
-Mcu.Pin32=PC10
-Mcu.Pin33=PC11
-Mcu.Pin34=PC12
-Mcu.Pin35=PD2
-Mcu.Pin36=PB3
-Mcu.Pin37=PB4
-Mcu.Pin38=PB5
-Mcu.Pin39=PB6
-Mcu.Pin4=PC3
-Mcu.Pin40=PB7
-Mcu.Pin41=PB8-BOOT0
-Mcu.Pin42=VP_SYS_VS_Systick
-Mcu.Pin43=VP_SYS_VS_DBSignals
-Mcu.Pin5=PA0
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA5
-Mcu.PinsNb=44
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PF0-OSC_IN
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PC4
+Mcu.Pin14=PC5
+Mcu.Pin15=PB0
+Mcu.Pin16=PB1
+Mcu.Pin17=PB2
+Mcu.Pin18=PB11
+Mcu.Pin19=PB12
+Mcu.Pin2=PG10-NRST
+Mcu.Pin20=PB13
+Mcu.Pin21=PB14
+Mcu.Pin22=PB15
+Mcu.Pin23=PC6
+Mcu.Pin24=PC7
+Mcu.Pin25=PC8
+Mcu.Pin26=PC9
+Mcu.Pin27=PA8
+Mcu.Pin28=PA9
+Mcu.Pin29=PA11
+Mcu.Pin3=PC1
+Mcu.Pin30=PA12
+Mcu.Pin31=PA13
+Mcu.Pin32=PA14
+Mcu.Pin33=PC10
+Mcu.Pin34=PC11
+Mcu.Pin35=PC12
+Mcu.Pin36=PD2
+Mcu.Pin37=PB3
+Mcu.Pin38=PB4
+Mcu.Pin39=PB5
+Mcu.Pin4=PC2
+Mcu.Pin40=PB6
+Mcu.Pin41=PB7
+Mcu.Pin42=PB8-BOOT0
+Mcu.Pin43=VP_SYS_VS_Systick
+Mcu.Pin44=VP_SYS_VS_DBSignals
+Mcu.Pin5=PC3
+Mcu.Pin6=PA0
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA3
+Mcu.PinsNb=45
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G484RETx
@@ -226,6 +227,8 @@ PC12.GPIOParameters=GPIO_Label
 PC12.GPIO_Label=LED_HB
 PC12.Locked=true
 PC12.Signal=GPIO_Output
+PC14-OSC32_IN.Mode=LSE-External-Clock-Source
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=Vc2
 PC2.Locked=true
@@ -304,7 +307,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_USART1_UART_Init-USART1-false-HAL-true,11-MX_USB_PCD_Init-USB-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB1TimFreq_Value=16000000
