--- a/battery_tester.ioc
+++ b/battery_tester.ioc
@@ -7,7 +7,7 @@ ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_11
 ADC2.CommonPathInternal=null|null|null|null
 ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
 ADC2.NbrOfConversionFlag=1
@@ -64,25 +64,26 @@ Mcu.Pin3=PC1
 Mcu.Pin30=PA12
 Mcu.Pin31=PA13
 Mcu.Pin32=PA14
-Mcu.Pin33=PC10
-Mcu.Pin34=PC11
-Mcu.Pin35=PC12
-Mcu.Pin36=PD2
-Mcu.Pin37=PB3
-Mcu.Pin38=PB4
-Mcu.Pin39=PB5
+Mcu.Pin33=PA15
+Mcu.Pin34=PC10
+Mcu.Pin35=PC11
+Mcu.Pin36=PC12
+Mcu.Pin37=PD2
+Mcu.Pin38=PB3
+Mcu.Pin39=PB4
 Mcu.Pin4=PC2
-Mcu.Pin40=PB6
-Mcu.Pin41=PB7
-Mcu.Pin42=PB8-BOOT0
-Mcu.Pin43=VP_SYS_VS_Systick
-Mcu.Pin44=VP_SYS_VS_DBSignals
+Mcu.Pin40=PB5
+Mcu.Pin41=PB6
+Mcu.Pin42=PB7
+Mcu.Pin43=PB8-BOOT0
+Mcu.Pin44=VP_SYS_VS_Systick
+Mcu.Pin45=VP_SYS_VS_DBSignals
 Mcu.Pin5=PC3
 Mcu.Pin6=PA0
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=45
+Mcu.PinsNb=46
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G484RETx
@@ -121,6 +122,10 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=POWER_KEY
+PA15.Locked=true
+PA15.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=Vc6
 PA2.Locked=true
@@ -136,9 +141,10 @@ PA5.Locked=true
 PA5.Mode=IN13-Single-Ended
 PA5.Signal=ADC2_IN13
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=BTS1_DEN
+PA6.GPIO_Label=BTS1_sense
 PA6.Locked=true
-PA6.Signal=GPIO_Output
+PA6.Mode=IN3-Single-Ended
+PA6.Signal=ADC2_IN3
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=BTS1_IN
 PA7.Locked=true
@@ -150,13 +156,13 @@ PA9.Locked=true
 PA9.Mode=I2C
 PA9.Signal=I2C2_SCL
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=BTS2_IN
+PB0.GPIO_Label=BTS2_DEN
 PB0.Locked=true
-PB0.Signal=S_TIM3_CH3
+PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=BTS2_DEN
+PB1.GPIO_Label=BTS2_IN
 PB1.Locked=true
-PB1.Signal=GPIO_Output
+PB1.Signal=S_TIM3_CH4
 PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=NFC_IRQ
 PB11.Locked=true
@@ -216,15 +222,15 @@ PC1.Locked=true
 PC1.Mode=IN7-Single-Ended
 PC1.Signal=ADC1_IN7
 PC10.GPIOParameters=GPIO_Label
-PC10.GPIO_Label=POWER_KEY
+PC10.GPIO_Label=LED_RUN
 PC10.Locked=true
 PC10.Signal=GPIO_Output
 PC11.GPIOParameters=GPIO_Label
-PC11.GPIO_Label=LED_RUN
+PC11.GPIO_Label=LED_HB
 PC11.Locked=true
 PC11.Signal=GPIO_Output
 PC12.GPIOParameters=GPIO_Label
-PC12.GPIO_Label=LED_HB
+PC12.GPIO_Label=SD_DETECT
 PC12.Locked=true
 PC12.Signal=GPIO_Output
 PC14-OSC32_IN.Mode=LSE-External-Clock-Source
@@ -240,10 +246,9 @@ PC3.Locked=true
 PC3.Mode=IN9-Single-Ended
 PC3.Signal=ADC1_IN9
 PC4.GPIOParameters=GPIO_Label
-PC4.GPIO_Label=BTS1_sense
+PC4.GPIO_Label=BTS1_DEN
 PC4.Locked=true
-PC4.Mode=IN5-Single-Ended
-PC4.Signal=ADC2_IN5
+PC4.Signal=GPIO_Output
 PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=BTS2_sense
 PC5.Locked=true
@@ -357,8 +362,8 @@ SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
 SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
-SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
-SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
+SH.S_TIM3_CH4.ConfNb=1
 SPI1.CalculateBaudRate=8.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
@@ -373,8 +378,8 @@ SPI2.VirtualType=VM_MASTER
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM2.IPParameters=Channel-PWM Generation4 CH4
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM3.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=Channel-PWM Generation4 CH4,Channel-PWM Generation2 CH2
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
